--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "express-validator": "^6.14.2",
     "mysql2": "^2.3.3",
     "sequelize": "^6.26.0",
     "sequelize-cli": "github:sequelize/cli"
